# FrogCafe

./: Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  rustfmt.toml
src/: assets.rs  input.rs  lib.rs  main.rs  utils.rs
src/gameplay/: behavior.rs  catching.rs  mod.rs
src/gameplay/catching/: input.rs  mod.rs
