[package]
name = "toadally_tacos"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.6.1"
heron={version="2.3.0", features=["2d"]}
bevy_asset_loader="0.9.0"
rand="0.8.5"

[target.wasm32-unknown-unknown]
runner="wasm-server-runner"

# needed for wasm compilation
# [lib]
# crate-type = ["cdylib", "rlib"]