[package]
name = "toadally_tacos"
version = "0.1.0-alpha"
edition = "2021"

[lib]
name="toadally_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="toadally_tacos"
path="src/bin/main.rs"


# [features]
# default = ["console_error_panic_hook"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy= "0.6.1"
heron={ version = "2.3.0", features = ["2d"] }
bevy_asset_loader= "0.9.0"
rand= "0.8.5"
wasm-bindgen = "0.2.80"
bevy_kira_audio = "0.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
# opt-level = "z"
lto = "thin"
